--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.35.2",
     "socket.io": "^4.7.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
