--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.6",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
